k8s/mshrm-studio-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aggregator-api-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  ingressClassName: aggregator-ingress
  rules:
    - host: api.mshrm.studio
      http:
        paths:
        - path: /aggregator
          pathType: Prefix
          backend:
            service:
              name: aggregator
              port:
                number: 30250
